# sem4_PCS

./: CMakeLists.txt  Company.cpp  Company.h  Developer.h  Employee.h  IWorkable.h  Manager.h  README.md  TaskProject.cpp  TaskProject.h  Tester.h  index.html  main.cpp  polymorphic_utils.cpp  polymorphic_utils.h
